[package]
name = "hybrid-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"]}
thiserror = "1.0"
containerd-client = "0.4.0"
tokio = "1.35.1"
oci-spec = "0.6.4"
futures = "0.3.30"
flate2 = "1.0.28"
tar = "0.4.40"
prost-types = "0.11.9"
protobuf = "3.3.0"
fs_extra = "1.3.0"
serde = "1.0.196"
time = { version = "0.3.34", features = ["serde"]}
containerd-shim = "0.7.0"

[[bin]]
name = "hybrid-cli"
path = "src/main.rs"